# quix-streams-extensions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: push.yaml  tag.yaml
examples/: README.md  docker-compose.yml
examples/pydantic_avro/: consumer.py  producer.py  requirements.txt
src/quixstreams_extensions/models/: core.py
src/quixstreams_extensions/models/chains/: json.py  loggers.py  pydantic.py  returns.py
src/quixstreams_extensions/models/chains/confluent_schema_registry/: avro.py
src/quixstreams_extensions/models/serializers/: pydantic.py
src/quixstreams_extensions/models/serializers/confluent_schema_registry/: avro.py
src/quixstreams_extensions/returns/stateful_pointfree/: __init__.py  bind.py  map.py
src/quixstreams_extensions/serializers/: composer.py
src/quixstreams_extensions/serializers/compositions/: confluent.py  pydantic.py
src/quixstreams_extensions/sinks/: gcp.py  google_cloud.py
tests/: conftest.py
tests/confluent_schema_registry_avro/: conftest.py  test_avro_chains.py
tests/pydantic/: test_pydantic_chains.py
tests/serializers/: test_composer.py  test_confluent.py  test_pydantic.py
tests/sinks/gcp/: test_firestore.py
tests/sinks/google_cloud/: test_firestore.py
