[tool.poetry]
name = "quixstreams-extensions"
version = "0.2.1"
description = "Extends quix-streams functionality"
authors = ["Volodymyr <trotsyshyn@proton.me>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.urls]
Homepage = "https://github.com/devova/quix-streams-extensions"

[tool.poetry.dependencies]
python = "^3.9"
quixstreams = "^2.9.0"
orjson = "<=3.10.6"  # pin version till https://github.com/ijl/orjson/issues/510

[tool.poetry.extras]
pydantic = ["pydantic"]
avro = ["fastavro", "confluent_kafka"]
gcp = ["google-cloud-firestore", "rocksdict"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
responses = "^0.25.3"
ruff = "^0.5.6"
fastavro = "^1.9.5"
confluent-kafka = "<2.5"
pre-commit = "^3.8.0"
google-cloud-firestore = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120